--- a/src/app/components/nav/nav.html
+++ b/src/app/components/nav/nav.html
@@ -1,5 +1,6 @@
 <ul>
-    <li>Acceuil</li>
-    <li>Liste</li>
-    <li>Contact</li>
+    <li><a routerlinkActive="active" routerlink="/home" >Acceuil</a></li>
+    <li><a routerlinkActive="active" routerlink="/list" >Liste</a></li>
+    <li><a routerlinkActive="active" routerlink="/contact" >Contact</a></li>
 </ul>
+<router-outlet></router-outlet>
