--- a/src/app/components/nav/nav.html
+++ b/src/app/components/nav/nav.html
@@ -1,6 +1,3 @@
 <ul>
-    <li><a routerlinkActive="active" routerlink="/home" >Acceuil</a></li>
-    <li><a routerlinkActive="active" routerlink="/list" >Liste</a></li>
-    <li><a routerlinkActive="active" routerlink="/contact" >Contact</a></li>
+    <li><a routerLink="/home">home</a></li>
 </ul>
-<router-outlet></router-outlet>
