nav bar and admin section v0

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,1 +1,8 @@
-<h1>mwah</h1>git push
+<div class="containe">
+  <video autoplay muted loop playsinline controls>
+    <source src="video/vid2.mp4" type="video/mp4" />
+  </video>
+ 
+</div>
+
+<app-features></app-features>
