--- a/src/app/components/nav/nav.html
+++ b/src/app/components/nav/nav.html
@@ -1,3 +1,13 @@
-<ul>
-    <li><a routerLink="/home">home</a></li>
+<ul class="nav justify-content-center custom-nav">
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/home">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="">About Us</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="">Contact</a>
+  </li>
 </ul>
+
+<router-outlet></router-outlet>
