--- a/src/app/components/admin/admin-login/admin-login.html
+++ b/src/app/components/admin/admin-login/admin-login.html
@@ -1,19 +1,20 @@
-<div class="auth-container d-flex align-items-center justify-content-center vh-100 bg-light">
-  <div class="card p-4 shadow" style="width: 350px;">
-    <h3 class="text-center mb-3">Admin Login</h3>
+<div class=" d-flex justify-content-center vh-70 bg-light ">
+  <div class="card p-4 shadow  d-flex align-content-center" style="width: 350px;">
+    <h3 class="text-center mb-3 ">Admin Login</h3>
 
     <form >
       <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
+        <label for="username" class="form-label">Username</label>
         <input
-          type="email"
+          type="name"
           id="email"
           class="form-control"
-          [(ngModel)]="email"
-          name="email"
+          [(ngModel)]="username"
+          name="username"
           required
         />
       </div>
+      <p [(ngModel)]="d"></p>
 
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
@@ -27,7 +28,7 @@
         />
       </div>
 
-      <button type="submit" class="btn btn-dark w-100">Login</button>
+      <button type="submit" class="btn btn-dark w-50 btn" (click)="login()">Login</button>
     </form>
   </div>
 </div>
