--- a/src/app/components/nav/nav.html
+++ b/src/app/components/nav/nav.html
@@ -3,10 +3,10 @@
     <a class="nav-link" routerLink="/home">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="">About Us</a>
+    <a class="nav-link" routerLink="siteList">Sites</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="">Contact</a>
+    <a class="nav-link" routerLink="contact">Contact</a>
   </li>
 </ul>
 
