--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,5 +1,5 @@
 <div class="containe">
-  <video autoplay muted loop playsinline controls >
+  <video autoplay [muted]="true" loop playsinline >
     <source src="video/vid2.mp4" type="video/mp4" />
   </video>
  
