--- a/src/app/components/admin/changepasswords/changepasswords.html
+++ b/src/app/components/admin/changepasswords/changepasswords.html
@@ -1,15 +1,15 @@
 <div class=" d-flex justify-content-center vh-70 bg-light ">
   <div class="card p-4 shadow  d-flex align-content-center" style="width: 350px;">
-    <h3 class="text-center mb-3 ">Admin Login</h3>
+    <h3 class="text-center mb-3 ">change password</h3>
 
     <form >
       <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
+        <label for="username" class="form-label">old password</label>
         <input
           type="name"
-          id="email"
+          id="email"    
           class="form-control"
-          [(ngModel)]="username"
+          [(ngModel)]="currentPassword"
           name="username"
           required
         />
@@ -22,14 +22,13 @@
           type="password"
           id="password"
           class="form-control"
-          [(ngModel)]="password"
+          [(ngModel)]="newPassword"
           name="password"
           required
         />
       </div>
 
-      <button type="submit" class="btn btn-dark w-100 btn" (click)="login()">Login</button>
-      <a routerLink="/changepassword">change password</a>
+      <button type="submit" class="btn btn-dark w-100 btn" (click)="adminPassword()">Login</button>
     </form>
   </div>
 </div>
