--- a/src/app/components/site-content/site-content.html
+++ b/src/app/components/site-content/site-content.html
@@ -1,2 +1,5 @@
-<p>site-content works!</p>
-aa {{site.id}}
+<br>
+{{site.id}} : 
+{{site.title}} - {{site.era}} - {{site.adresse}} - {{site.price}} DT
+<img src="{{site.imageUrl}}" alt="{{site.title}}" width="200">
+
