--- a/src/app/components/site-list/site-list.html
+++ b/src/app/components/site-list/site-list.html
@@ -1,7 +1,7 @@
-<p>site-list works!</p>
 
 
-<ul>
+
+<ul class="d-flex gap-5 flex-wrap  justify-content-center gap-3 mt-10">
     @for(site of siteList; track $index){
         <app-site-content [site]="site"></app-site-content>
     }
