--- a/src/app/components/site-list/site-list.html
+++ b/src/app/components/site-list/site-list.html
@@ -1,8 +1,9 @@
 
 
-
-<ul class="d-flex gap-5 flex-wrap  justify-content-center gap-3 mt-10">
+<div class="container2">
+<div   class=" container">
     @for(site of siteList; track $index){
         <app-site-content [site]="site"></app-site-content>
     }
-</ul>
+</div>
+</div>
