--- a/src/app/components/site-content/site-content.html
+++ b/src/app/components/site-content/site-content.html
@@ -4,6 +4,6 @@
     <h5 class="card-title">{{site.title}}</h5>
     <p class="card-text">nombre visiteures : {{site.visitorsPerYear}}</p>
     <p class="card-text">rating  {{site.rating}}⭐  </p>
-    <a href="#" class="btn btn-primary btn-sm">info</a>
+    <a href="#" class="btn btn-primary btn-sm" [routerLink]="['/siteselected',site.id]">info</a>
   </div>
 </div>
