--- a/src/app/components/site-selected/site-selected.html
+++ b/src/app/components/site-selected/site-selected.html
@@ -1,1 +1,47 @@
-<p>site-selected works!</p>
+<div class="container">
+  <div class="container2">
+  <div class="upper">
+    <img [src]="site[0].imageUrl" alt="" style="width: 350px;">
+    <h5>{{site[0].title}}</h5>
+    
+    
+  </div>
+<p>{{site[0].openingHours}}</p></div>
+
+
+    <!-- "era": "Romaine",
+    "adresse": "Sbeitla, Gouvernorat de Kasserine, Tunisie",
+    "price": 10,
+    "open": true,
+    "creation_date": "100-01-01",
+    "rating": 4.7,
+    "openingHours": "08:00 - 18:00",
+    "visitorsPerYear": 130000, -->
+  
+
+
+
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img [src]="g[0]" class=" d-block  w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img [src]="g[1]" class=" d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img [src]="g[2]" class=" d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
+
+ 
