--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,14 @@
 }
 * {
     margin: 0;
+   
     
 }
 
 body, html {
   width: 100%;
   height: 100%;
+   background-color: rgb(53, 53, 155);
 }   
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
