--- a/src/app/components/admin/admindashboard/admindashboard.html
+++ b/src/app/components/admin/admindashboard/admindashboard.html
@@ -1,1 +1,24 @@
-<p>admindashboard works!</p>
+<div class="d-flex justify-content-center m-3">
+<form class="d-flex" style="width: 500px;">
+        <input (input)="rechercherSite()"  name="searchInput" [(ngModel)]="site" class="form-control me-2" type="search" placeholder="Search" id="search"/>
+        <button (click)="rechercherSite()" class="btn btn-dark" type="button">Search</button>
+</form>
+</div>
+<div class="d-flex justify-content-center flex-wrap">
+    @for (site of siteRechercher; track $index) {
+ <div class="card site-card " style="width: 18rem;">
+  <img [src]="site.imageUrl" class="card-img-top site-img" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">{{site.title}}</h5>
+    <p class="card-text">nombre visiteures : {{site.visitorsPerYear}}</p>
+    <p class="card-text">rating  {{site.rating}}⭐  </p>
+    <div class="d-flex justify-content-center gap-3">
+    <button class="btn btn-primary btn-sm" (click)="supprimersite(site.id,site)">deleate</button>
+    <button class="btn btn-primary btn-sm">modifier</button>
+    </div>
+  </div>
+</div>
+
+    }
+</div>
+
