--- a/src/app/components/admin/admin-nav/admin-nav.html
+++ b/src/app/components/admin/admin-nav/admin-nav.html
@@ -1,12 +1,12 @@
 <ul class="nav justify-content-center custom-nav">
   <li class="nav-item">
-    <a class="nav-link" routerLink="/home">sites</a>
+    <a class="nav-link" routerLink="admindash">Sites</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="siteList">comments</a>
+    <a class="nav-link" routerLink="comments">Comments</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="home">logout</a>
+    <a class="nav-link" routerLink="home">Logout</a>
   </li>
 </ul>
 
