--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+
+
+<div class="d-flex gap-5 justify-content-center align-items-center " style="height: 12vh;">
+    © 2025 Sites Archéologiques de Tunisie <br>
+    Project by Cherni & Ammar - ISET Charguia
+</div>
