--- a/src/app/components/site-content/site-content.html
+++ b/src/app/components/site-content/site-content.html
@@ -1,9 +1,12 @@
+
 <div class="card site-card " style="width: 18rem;">
   <img [src]="site.imageUrl" class="card-img-top site-img" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{site.title}}</h5>
-    <p class="card-text">nombre visiteures : {{site.visitorsPerYear}}</p>
-    <p class="card-text">rating  {{site.rating}}⭐  </p>
+    <p class="card-text">Era  {{site.era}}  </p>
+    <p class="card-text">Number of visitors : {{site.visitorsPerYear}}</p>
+    <p class="card-text">Price : {{site.price}}</p>
+    <p class="card-text">Rating  {{site.rating}}⭐  </p>
     <a href="#" class="btn btn-primary btn-sm" [routerLink]="['/siteselected',site.id]">info</a>
   </div>
 </div>
