--- a/src/app/components/site-list/site-list.html
+++ b/src/app/components/site-list/site-list.html
@@ -1,9 +1,34 @@
+<div class="d-flex justify-content-center m-3">
+    <form class="d-flex" style="width: 600px;">
+        <input (input)="rechercherSite()" name="searchInput" [(ngModel)]="site" class="form-control me-2" type="search"
+            placeholder="Search" id="search" />
+
+        <div class="dropdown">
+            <button class="btn btn-dark dropdown-toggle" style="width:200px" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Filter </button>
+            <ul class="dropdown-menu dropdown-menu-dark">
+                <li class="d-flex align-items-center gap-2">
+                Min price: <br> 0 
+                <input type="range" min="0" max="15" value="0" [(ngModel)]="minPrice" name="minPrice" (input)="priceSlider()">
+                 15
+                {{minPrice}}
+                </li>
+                
+                <!-- <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li> --> 
+            </ul>
+        </div>
+        
+        <button (click)="rechercherSite()" class="btn btn-dark" type="button">Search</button>
+    </form>
+</div>
 
 
 <div class="container2">
-<div   class=" container">
-    @for(site of siteList; track $index){
+    <div class=" container">
+        @for(site of siteFiltered; track $index){
         <app-site-content [site]="site"></app-site-content>
-    }
-</div>
+        }
+    </div>
 </div>
