--- a/src/app/components/site-content/site-content.html
+++ b/src/app/components/site-content/site-content.html
@@ -7,6 +7,6 @@
     <p class="card-text">Number of visitors : {{site.visitorsPerYear}}</p>
     <p class="card-text">Price : {{site.price}}</p>
     <p class="card-text">Rating  {{site.rating}}⭐  </p>
-    <a href="#" class="btn btn-primary btn-sm" [routerLink]="['/siteselected',site.id]">info</a>
+    <a href="#" class="btn btn-primary btn-sm" [routerLink]="['/siteselected',site.id]">Info</a>
   </div>
 </div>
