--- a/src/app/components/admin/admin-nav/admin-nav.html
+++ b/src/app/components/admin/admin-nav/admin-nav.html
@@ -3,10 +3,11 @@
     <a class="nav-link" routerLink="admindash">Sites</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="comments">Comments</a>
+    <a class="nav-link" routerLink="/comments">Comments</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="home">Logout</a>
   </li>
 </ul>
+
 
