commentaires admin list

--- a/src/app/components/admin/admin-comments/admin-comments.html
+++ b/src/app/components/admin/admin-comments/admin-comments.html
@@ -1,2 +1,19 @@
-<p>admin-comments works!</p>
-fffffffffff
+<div class="comments">
+  @for (site of siteList; track $index) {  
+    @for (c of site.comments; track $index){
+    <div class="list-group">
+        <div href="#" class="list-group-item d-flex  " aria-current="true">
+            <div class="d-flex w-100 n gap-2">
+            <h5 class="mb-1">{{c.author}}</h5>
+            <small>{{c.date}}</small>
+            </div>
+            <p class="mb-1">{{c.content}}</p>
+            <div>
+                <button type="button" class="btn btn-dark">Delete</button>
+            </div>
+        </div>
+    </div>
+    }
+  }
+
+ </div>
