--- a/src/app/features/features.html
+++ b/src/app/features/features.html
@@ -1,36 +1,37 @@
-<section class="features py-5 bg-light">
-  <div class="container text-center"> 
-    <div class="row g-4">
+<section class="features py-5 mt " style="background-color: rgb(255, 255, 255); width: 100%;">
+  <div class="container text-center"  > 
+    <h2 class="mb-5 mt-2 ">Explore Tunisia's Archaeological Sites</h2>
+    <div class="d-flex justify-content-center gap-5 ">
       
       <!-- Card 1 -->
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm border-0">
+      <div class="col-md-3">
+        <div class="card h-80 shadow-sm border-0">
           <div class="card-body">
-            <img src="sites/carthage/1.jpg" alt="History icon" class="mb-3 rounded-circle" width="90" height="90">
-            <h3 class="fw-bold text-dark mb-3">Ancient Civilizations</h3>
-            <p class="text-muted">Discover the rich heritage of Carthage, Dougga, and other legendary sites.</p>
+            <img src="sites/carthage/1.jpg" alt="Ancient heritage" class="mb-3 " width="100%" >
+            <h3 class="mb-3">Ancient Civilizations</h3>
+            <p class="text-muted">Discover the fascinating history of Carthage, Dougga, and other iconic sites.</p>
           </div>
         </div>
       </div>
 
       <!-- Card 2 -->
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="card h-100 shadow-sm border-0">
           <div class="card-body">
-            <img src="sites/sbeitla/1.jpg" alt="Museum icon" class="mb-3 rounded-circle" width="90" height="90">
-            <h3 class="fw-bold text-dark mb-3">National Museums</h3>
-            <p class="text-muted">Explore Tunisia’s greatest collections of artifacts and mosaics.</p>
+            <img src="sites/sbeitla/1.jpg" alt="National museums" class="mb-3 " width="100%" >
+            <h3 class=" mb-3">National Museums</h3>
+            <p class="text-muted">Explore Tunisia’s richest collections of artifacts and mosaics.</p>
           </div>
         </div>
       </div>
 
       <!-- Card 3 -->
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="card h-100 shadow-sm border-0">
           <div class="card-body">
-            <img src="sites/amphitheatre/1.jpg" alt="Culture icon" class="mb-3 rounded-circle" width="90" height="90">
-            <h3 class="fw-bold text-dark mb-3">Living Culture</h3>
-            <p class="text-muted">Experience traditions that keep our archaeological history alive today.</p>
+            <img src="sites/amphitheatre/1.jpg" alt="Living culture" class="mb-3 " width="100%">
+            <h3 class=" mb-3">Living Culture</h3>
+            <p class="text-muted">Experience traditions that keep Tunisia’s archaeological heritage alive today.</p>
           </div>
         </div>
       </div>
