admin guard created

--- a/src/app/components/admin/admin-nav/admin-nav.html
+++ b/src/app/components/admin/admin-nav/admin-nav.html
@@ -6,7 +6,7 @@
     <a class="nav-link" routerLink="/comments">Comments</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="home">Logout</a>
+    <a  (click)="logout()"   class="nav-link" routerLink="home">Logout</a>
   </li>
 </ul>
 
