--- a/src/app/components/admin/changepasswords/changepasswords.html
+++ b/src/app/components/admin/changepasswords/changepasswords.html
@@ -6,7 +6,7 @@
       <div class="mb-3">
         <label for="username" class="form-label">old password</label>
         <input
-          type="name"
+          type="password"
           id="email"    
           class="form-control"
           [(ngModel)]="currentPassword"
@@ -14,7 +14,6 @@
           required
         />
       </div>
-      <p [(ngModel)]="d"></p>
 
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
@@ -23,6 +22,17 @@
           id="password"
           class="form-control"
           [(ngModel)]="newPassword"
+          name="password"
+          required
+        />
+      </div>
+        <div class="mb-3">
+        <label for="password" class="form-label">Confirm Password</label>
+        <input
+          type="password"
+          id="password"
+          class="form-control"
+          [(ngModel)]="confirmPassword"
           name="password"
           required
         />
