--- a/src/app/components/site-content/site-content.html
+++ b/src/app/components/site-content/site-content.html
@@ -1,12 +1,13 @@
 
-<div class="card site-card " style="width: 18rem;">
+<div class="card site-card">
   <img [src]="site.imageUrl" class="card-img-top site-img" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">{{site.title}}</h5>
-    <p class="card-text">Era  {{site.era}}  </p>
-    <p class="card-text">Number of visitors : {{site.visitorsPerYear}}</p>
-    <p class="card-text">Price : {{site.price}}</p>
-    <p class="card-text">Rating  {{site.rating}}⭐  </p>
-    <a href="#" class="btn btn-primary btn-sm" [routerLink]="['/siteselected',site.id]">Info</a>
+  <div class="card-body ">
+    <h1 class="card-title d-flex justify-content-center mb-2">{{site.title}}</h1>
+    <p class="card-text text-muted mb-1"><b>Era: </b><span class="text-dark">{{site.era}}</span></p>
+    <p class="card-text text-muted mb-1"><b>Visitors: </b><span class=" text-dark">{{site.visitorsPerYear}}</span></p>
+    <p class="card-text text-muted mb-1"><b>Price: </b><span class=" text-dark">{{site.price | currency:'TND' }}</span></p>
+    <p class="card-text mb-2"><b>Rating: </b> <span class="text-warning">{{site.rating}}⭐</span></p>
+    <a class="btn btn-sm btn-primary w-100" [routerLink]="['/siteselected', site.id]">More Info</a>
   </div>
 </div>
+
