--- a/src/app/features/features.html
+++ b/src/app/features/features.html
@@ -1,4 +1,4 @@
-<section class="features py-5 mt " style="background-color: rgb(255, 255, 255); width: 100%;">
+<section class="features  " style="background-color: rgb(255, 255, 255); width: 100%;">
   <div class="container text-center"  > 
     <h2 class="mb-5 mt-2 ">Explore Tunisia's Archaeological Sites</h2>
     <div class="d-flex justify-content-center gap-5 ">
