--- a/src/app/components/admin/admin-login/admin-login.html
+++ b/src/app/components/admin/admin-login/admin-login.html
@@ -1,4 +1,4 @@
-<div class=" d-flex justify-content-center vh-70 bg-light ">
+<div class=" container d-flex justify-content-center align-content-center vh-70 bg-light ">
   <div class="card p-4 shadow  d-flex align-content-center" style="width: 350px;">
     <h3 class="text-center mb-3 ">Admin Login</h3>
 
