--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -1,1 +1,34 @@
-<p>contact works!</p>
+  <div class="container-fluid p-0">
+  <div class="  mt-5 conrainer d-flex align-items-center gap-5 justify-content-center flex-reverse flex-row-reverse"  >
+    <div class=" cont  col-md-5  bg-white">
+        <h2 class="mb-4 d-flex justify-content-center ">Contact Us</h2>
+        <form class="d-flex   flex-column ">
+          <div class="mb-3">
+            <label for="name" class="form-label fw-semibold">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter your name" />
+          </div>
+
+          <div class="mb-3">
+            <label for="email" class="form-label fw-semibold">Email</label>
+            <input type="email" class="    form-control" id="email" placeholder="Enter your email" />
+          </div>
+
+          <div class="mb-3">
+            <label for="message" class="form-label fw-semibold">Message</label>
+            <textarea class="form-control" id="message" rows="4" placeholder="Write your message"></textarea>
+          </div>
+
+          <button type="submit" class="button w-100 py-2">Send Message</button>
+        </form>
+
+    </div>
+
+    <div class=" col-md-6  sec d-flex flex-column justify-content-center align-items-center">
+      <img class="img" src="sites\dougga\2.jpg"  />
+       <h2 >Discover  the beauty of Tunisia </h2>
+       
+    </div>
+  </div>
+    </div>
+
+
