--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -11,7 +11,7 @@
 </div>
 
 
-<app-features class="mt-0" [class]="{
+<app-features [class]="{
   sec2:true
 }" ></app-features>
 
@@ -23,7 +23,7 @@
     <h6>
       Discover the fascinating history of <strong>Carthage</strong>, <strong>Dougga</strong>, and other iconic archaeological sites.<br><br>
       Wander through ancient ruins, admire monumental architecture, and imagine the daily life of the civilizations 
-      that shaped Tunisia’s rich and diverse cultural heritage over the centuries.
+      that shaped Tunisia's rich and diverse cultural heritage over the centuries.
     </h6>
   </div>
 </div>
@@ -36,7 +36,9 @@
     <h6>
       Experience the vibrant traditions, local customs, and cultural practices that keep Tunisia’s heritage alive today.<br><br>
       From festivals to artisanal crafts, immerse yourself in the living culture that connects the country’s rich archaeological past with its dynamic present.
+       {{s}}
     </h6>
+
   </div>
 </div>
 
