work on the add form

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -23,7 +23,7 @@
     <h6>
       Discover the fascinating history of <strong>Carthage</strong>, <strong>Dougga</strong>, and other iconic archaeological sites.<br><br>
       Wander through ancient ruins, admire monumental architecture, and imagine the daily life of the civilizations 
-      that shaped Tunisia’s rich and diverse cultural heritage over the centuries.
+      that shaped Tunisia's rich and diverse cultural heritage over the centuries.
     </h6>
   </div>
 </div>
