--- a/src/app/components/admin/add-site/add-site.html
+++ b/src/app/components/admin/add-site/add-site.html
@@ -1,49 +1,49 @@
 <h2 class="text-center my-4">Add a New Site</h2>
 
-<form class="p-4 border rounded shadow-sm" style="max-width: 600px; margin: auto;">
+<form [formGroup]="siteForm" (ngSubmit)="onSubmit(); siteForm.reset()" class="p-4 border rounded shadow-sm" style="max-width: 600px; margin: auto;">
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
-    <input type="text" id="title" name="title" class="form-control">
+    <input formControlName="title" type="text" id="title" name="title" class="form-control">
   </div>
 
   <div class="mb-3">
     <label for="era" class="form-label">Era</label>
-    <input type="text" id="era" name="era" class="form-control">
+    <input formControlName="era" type="text" id="era" name="era" class="form-control">
   </div>
 
   <div class="mb-3">
     <label for="address" class="form-label">Address</label>
-    <input type="text" id="address" name="address" class="form-control">
+    <input formControlName="address" type="text" id="address" name="address" class="form-control">
   </div>
 
   <div class="mb-3">
     <label for="price" class="form-label">Price</label>
-    <input type="number" id="price" name="price" class="form-control">
+    <input formControlName="price" type="number" id="price" name="price" class="form-control">
   </div>
 
   <div class="mb-3">
     <label for="creation_date" class="form-label">Creation Date</label>
-    <input type="date" id="creation_date" name="creation_date" class="form-control">
+    <input formControlName="creation_date" type="date" id="creation_date" name="creation_date" class="form-control">
   </div>
 
   <div class="mb-3">
     <label for="rating" class="form-label">Rating</label>
-    <input type="number" step="0.1" id="rating" name="rating" class="form-control" min="0" max="5">
+    <input formControlName="rating" type="number" step="0.1" id="rating" name="rating" class="form-control" min="0" max="5">
   </div>
 
   <div class="mb-3">
     <label for="openingHours" class="form-label">Opening Hours</label>
-    <input type="text" id="openingHours" name="openingHours" class="form-control" placeholder="e.g. 09:00 - 19:00">
+    <input formControlName="openingHours" type="text" id="openingHours" name="openingHours" class="form-control" placeholder="e.g. 09:00 - 19:00">
   </div>
 
   <div class="mb-3">
     <label for="visitorsPerYear" class="form-label">Visitors per Year</label>
-    <input type="number" id="visitorsPerYear" name="visitorsPerYear" class="form-control">
+    <input formControlName="visitorsPerYear" type="number" id="visitorsPerYear" name="visitorsPerYear" class="form-control">
   </div>
 
   <div class="mb-3">
     <label for="description" class="form-label">Description</label>
-    <textarea id="description" name="description" class="form-control" rows="4"></textarea>
+    <textarea formControlName="description" id="description" name="description" class="form-control" rows="4"></textarea>
   </div>
 
   <!-- <div class="mb-3">
@@ -53,17 +53,17 @@
 
   <div class="mb-3">
     <label for="formFile" class="form-label">Thumbnail</label>
-    <input class="form-control" type="file" id="formFile">
+    <input formControlName="thumbnail" class="form-control" type="file" id="formFile">
   </div>
 
   <div class="mb-3">
     <label for="formFileMultiple" class="form-label">Gallery</label>
-    <input class="form-control" type="file" id="formFileMultiple" multiple>
+    <input formControlName="gallery" class="form-control" type="file" id="formFileMultiple" multiple>
   </div>
   
   <div class="form-check mb-3 ms-2">
     <input type="checkbox" id="open" name="open" class="form-check-input" style="transform: scale(1.6)">
-    <label for="open" class="form-check-label">Open</label>
+    <label formControlName="open" for="open" class="form-check-label">Open</label>
   </div>
   
 
