--- a/src/app/components/site-content/site-content.html
+++ b/src/app/components/site-content/site-content.html
@@ -1,6 +1,6 @@
 
 <div class="card site-card">
-  <img [src]="site.imageUrl" class="card-img-top site-img" alt="...">
+  <img [src]="site.thumbnail" class="card-img-top site-img" alt="...">
   <div class="card-body ">
     <h1 class="card-title d-flex justify-content-center mb-2">{{site.title}}</h1>
     <p class="card-text text-muted mb-1"><b>Era: </b><span class="text-dark">{{site.era}}</span></p>
