--- a/src/app/components/site-selected/site-selected.html
+++ b/src/app/components/site-selected/site-selected.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="container2 d-flex gap-3">
   <div class="upper m-4"  >
-    <img [src]="site[0].imageUrl" alt="" style="width: 350px;">
+    <img [src]="site[0].thumbnail" alt="" style="width: 350px;">
     <h5>{{site[0].title}}</h5>
     
     
