--- a/src/app/components/admin/add-site/add-site.html
+++ b/src/app/components/admin/add-site/add-site.html
@@ -53,12 +53,12 @@
 
   <div class="mb-3">
     <label for="formFile" class="form-label">Thumbnail</label>
-    <input formControlName="thumbnail" class="form-control" type="file" id="formFile">
+    <input (change)="onThumbnailSelected($event)" class="form-control" type="file" id="formFile">
   </div>
 
   <div class="mb-3">
     <label for="formFileMultiple" class="form-label">Gallery</label>
-    <input formControlName="gallery" class="form-control" type="file" id="formFileMultiple" multiple>
+    <input (change)="onGallerySelected($event)" class="form-control" type="file" id="formFileMultiple" multiple>
   </div>
   
   <div class=" mb-3">
