password change working

--- a/src/app/components/admin/changepasswords/changepasswords.html
+++ b/src/app/components/admin/changepasswords/changepasswords.html
@@ -38,7 +38,7 @@
         />
       </div>
 
-      <button type="submit" class="btn btn-dark w-100 btn" (click)="adminPassword()">Login</button>
+      <button type="submit" class="btn btn-dark w-100 btn" (click)="adminPassword()">change password</button>
     </form>
   </div>
 </div>
