--- a/src/app/components/admin/add-site/add-site.html
+++ b/src/app/components/admin/add-site/add-site.html
@@ -1,6 +1,6 @@
 <h2 class="text-center my-4">Add a New Site</h2>
 
-<form [formGroup]="siteForm" (ngSubmit)="onSubmit(); siteForm.reset()" class="p-4 border rounded shadow-sm" style="max-width: 600px; margin: auto;">
+<form [formGroup]="siteForm" (ngSubmit)="onSubmit(); siteForm.reset()" noValidate class="p-4 border rounded shadow-sm" style="max-width: 600px; margin: auto;">
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
     <input formControlName="title" type="text" id="title" name="title" class="form-control">
@@ -70,6 +70,6 @@
 
   <div class="d-flex gap-2">
     <button type="button" class="btn btn-dark w-100" routerLink="/admindash">Cancel</button>
-    <button type="submit" class="btn btn-dark w-100">Add Site</button>
+    <button [disabled]="siteForm.invalid" type="submit" class="btn btn-dark w-100">Add Site</button>
   </div>
 </form>
